<?xml version="1.0"?>
<package>
  <name>test3</name>
  <version>0.1.0</version>
  <description>

     test3

  </description>
  <maintainer email="dwy@gmail.com">dwy</maintainer>
  <author>dwy</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

    <build_depend>rviz</build_depend>
    <run_depend>rviz</run_depend>
    <build_depend>qtbase5-dev</build_depend>
    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>


</package>
