<?xml version="1.0"?>
<package>
  <name>image_node_a</name>
  <version>0.0.0</version>
  <description>The image_node_a package</description>
  <maintainer email="abc@ding.com">abc</maintainer>
  <license>TODO</license>
 
   <build_depend>message_generation</build_depend> 
   <run_depend>message_runtime</run_depend>
 
 
   <build_depend>opencv2</build_depend>
   <run_depend>opencv2</run_depend>
 
 
  <buildtool_depend>catkin</buildtool_depend>
   
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
 
  <export>
  </export>
</package>
